# copyright-rust

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  Makefile  askpass.sh  init.sh  run.sh  script-runner.groovy
webhook/: Cargo.toml
webhook/src/: bb.rs  gh.rs  main.rs  util.rs
work/: Cargo.toml
work/src/: main.rs
work/src/action/: bitbucket.rs  copyright_csharp.txt  copyright_js.txt  detector.rs  github.rs  mod.rs
work/src/action/models/: bitbucket.rs  github.rs  mod.rs
