[package]
name = "webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0-rc.2"
hmac = "0.12.1"
hyper = "0.14.20"
jsonwebtoken = { version = "8.1.1", features = ["use_pem"] }
reqwest = { version = "0.11.11", features = ["tokio-rustls", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sha2 = "0.10.6"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "process", "sync", "parking_lot", "fs"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
