[package]
name = "work"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
base64 = "0.13.0"
clap = { version = "4.0.8", features = ["derive"] }
encoding_rs = "0.8.31"
glob = "0.3.0"
rand = "0.8.5"
rayon = "1.5.3"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tera = "1.17.1"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15" }
walkdir = "2.3.2"

